# comfy-draftsman

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PERMISSIONS.md
src/comfy_draftsman/: __init__.py  config.py  imaging.py  server.py  session.py
src/comfy_draftsman/comfy/: catalog.py  client.py  progress.py
src/comfy_draftsman/graph/: annotate.py  layout.py  lint.py  model.py  port.py  subgraph.py  validate.py  widgets.py
src/comfy_draftsman/knowledge/families/: krea2.yaml
tests/: conftest.py  test_catalog.py  test_client.py  test_dynamic_combo.py  test_integration_live.py  test_knowledge.py  test_layout.py  test_lint.py  test_mcp_e2e.py  test_model.py  test_output_relocation.py  test_round10_subgraphs.py  test_round15_cowork.py  test_round45_fixes.py  test_round7_fixes.py  test_round8_execution.py  test_server_save.py  test_validate.py
tests/fixtures/: object_info_trimmed.json
