[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfy-draftsman"
version = "0.6.0"
description = "Local-first MCP server that drafts, organizes, validates, and runs ComfyUI workflows - saved as clean, labeled, annotated UI-format graphs anyone can read."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "EnragedAntelope" }]
keywords = ["comfyui", "mcp", "model-context-protocol", "workflow", "stable-diffusion", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "mcp>=1.10",
  "httpx>=0.27",
  "websockets>=13.0",
  "pyyaml>=6.0",
  "pydantic>=2.7",
  "pillow>=10.0",
]

[project.urls]
Repository = "https://github.com/EnragedAntelope/comfy-draftsman"
Issues = "https://github.com/EnragedAntelope/comfy-draftsman/issues"

[project.scripts]
comfy-draftsman = "comfy_draftsman.server:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/comfy_draftsman"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires a running ComfyUI test instance (COMFYUI_TEST_URL)",
]
addopts = "-m 'not integration'"
